--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,7 @@ inventory = inventories/vagrant
 remote_user = vagrant
 host_key_checking = False
 nocows = 0
+
+[privilege_escalation]
+become = True
+become_method = sudo
